<resources>
    <string name="app_name">groupme</string>
    <string name="google_app_id">groupme-server</string>
    <string name="groupName">Group Name</string>
    <string name="groupNameHintText">Enter your Group name</string>
    <string name="closedGroup">Closed Group</string>
    <string name="openGroup">Open Group</string>
    <string name="rangeToCover">Range</string>
    <string name="rangeHintText">Enter range to cover</string>
    <string name="noPermissionMsg">Please give appropriate permissions for the app. Enable Internet and GPS for smooth functioning</string>
    <string name="groups_in_your_range">Groups in your range</string>
    <string name="create_new_group">Create new Group</string>
    <string name="save">Save</string>
    <string name="no_group_msg">There are no groups yet! create a new one now</string>
    <string name="send">send</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="login">Login</string>
    <string name="your_groups">Your Groups!</string>
    <string name="search_groups_in_your_range">Search groups in your range</string>
    <string name="no_group_nearby_msg">No other group exist in your radius</string>

</resources>
