<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <ProgressBar  android:indeterminate="true"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:id="@+id/progressIndicator"></ProgressBar>


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/HeaderText"
            android:layout_centerVertical="true"
            android:text="@string/your_groups" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:orientation="horizontal">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/create_new_group"
                android:onClick="createNewGroup"
                android:text="@string/create_new_group"
                android:paddingRight="10dp"
                android:background="@null" />
            <ImageButton
                android:id="@+id/search_other_groups"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/magnifying_glass"
                android:text="@string/search_groups_in_your_range"
                android:onClick="searchNearbyGroups"
                android:background="@null"/>


        </LinearLayout>



    </RelativeLayout>

    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/user_groups_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ListViewStyle"
        android:layout_below="@+id/header" />

    <TextView
        android:id="@+id/no_group_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/no_group_msg"
        android:textSize="18dp"
        android:visibility="invisible" />


</RelativeLayout>